kylin-recorder (1.0.7) v101; urgency=medium

  * 修改项目名

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 7 Oct 2020 15:30:00 +0800

kylin-recorder (1.0.6) v101; urgency=medium

  * 解决禅道bug20854 : 录音无声音

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 7 Oct 2020 15:30:00 +0800

kylin-recorder (1.0.5) v101; urgency=medium

  * 解决禅道bug20984 : 首次进入录音界面时，暂停继续按钮图标显示不当

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 7 Oct 2020 08:50:06 +0800

kylin-recorder (1.0.4) v101; urgency=medium

  * 解决禅道bug20968 : 界面按钮与设计存在差异

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 30 Sep 2020 17:06:06 +0800

kylin-recorder (1.0.3) v101; urgency=medium

  * 解决禅道bug20679 : 开始菜单图标尺寸异常

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 30 Sep 2020 16:06:06 +0800

kylin-recorder (1.0.2) v101; urgency=medium

  * 解决禅道bug20622 : 添加快捷方式到桌面，图标比其它应用的快捷方式图标要小
  * 解决禅道bug20565 : 开始录音，CPU占用率达到100%及以上
  * 解决禅道bug20538 : 最小化到任务栏，缩略图窗口名未汉化
  * 解决禅道bug20536 : 任务栏图标为中尺寸和大尺寸时，麒麟录音最小化到任务栏图标过小
  * 解决禅道bug20533 : 保存文件的确定按钮未汉化

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 30 Sep 2020 15:06:06 +0800

kylin-recorder (1.0.1) unstable; urgency=medium

  * 初始化麒麟录音项目

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 16 Sep 2020 15:06:06 +0800