@@ -1,1 +1,1 @@
-kylin-recorder_1.0.7_source.buildinfo utils optional
+kylin-recorder_1.0.8_source.buildinfo utils optional
