@@ -1,3 +1,12 @@
+kylin-recorder (1.0.8) v101; urgency=medium
+
+  * 解决禅道bug20967 ： 界面边界处无法拖拽
+  * 解决禅道bug21055 ： 通过拖拽麒麟录音到桌面顶部实现最大化时，mini图标没有变化且界面四角为圆角
+  * 解决禅道bug21263 ： 4K屏录音工具图标未适配
+
+ -- baijincheng <baijincheng@kylinos.cn>  Wed, 19 Oct 2020 19:30:00 +0800
+
+
 kylin-recorder (1.0.7) v101; urgency=medium
 
   * 修改项目名
